# so69978314

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: ci.yml
include/: myLib.h
src/: myLib.cpp
test/: test.cpp
